Thu Aug 24 16:33:22 UTC 2006  James H. Hill     <hillj@isis.vanderbilt.edu>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:

          Added auto-props for *.tex and *.cls files.

Thu Aug 24 13:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h
          Removed ACE_HAS_SOCK_BUF_SIZE_MAX, not needed anymore with the
          latest OpenVMS versions

Thu Aug 24 08:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.h
        * ace/Service_Repository.h
        * ace/Service_Object.cpp
        * ace/Parse_Node.cpp
        * ace/Service_Object.inl
        * ace/Parse_Node.h
        * ace/Service_Repository.cpp
        * ace/Service_Object.h
        * ace/Service_Gestalt.h
        * ace/Service_Gestalt.cpp
        * ace/DLL_Manager.cpp
        * ace/DLL.cpp
          Reverted change from below on request of Iliyan because it broke
          a set of tests that spawn a thread in init.
          Tue Aug 22 21:43:34 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

Wed Aug 23 08:32:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Sock_Connect.{h,cpp}:
          Reverted the change below, VxWorks/OpenVMS/AIX all have problems
          after this change

        Tue Aug 22 15:19:46 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
        * ace/Sock_Connect.h:
        * ace/Sock_Connect.cpp:

Tue Aug 22 22:52:41 UTC 2006  Steve Huston  <shuston@riverace.com>

        * protocols/ace/RMCast/Protocol.h: Replaced use of
          ACE_Refcounted_Auto_Ptr with ACE_Strong_Bound_Ptr. Code formerly used
          ACE_Refcounted_Auto_Ptr::release() with the assumption it had the
          same semantics as auto_ptr::release() - stealing the pointer away.
          This used to work by accident. The fixed ACE_Refcounted_Auto_Ptr's
          release() method decrements the reference count which may cause the
          object to be deleted, which is what happened all the time in the