@@ -2141,6 +2141,7 @@ Christoph Schmalhofer <christoph dot schmalhofer at gmx dot net>
 Amnon AB <AmnonAB at gmail dot com>
 Ephy Levy <EphyLevy at gmail dot com>
 Don Meek <Don dot Meek at windstream dot com>
+Nzer Zaidenberg <scipioenterprises at yahoo dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
